# Insatsvaljare

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
ref/: kommunalskatt_snapshot.json  stabelo_snapshot.json  swedish-income-tax-2026.md  swedish-mortgage-policy-2026.md
src/insatsvaljare/: __init__.py  app.py  defaults.py  i18n.py  kommunalskatt.py  model.py  montecarlo.py  rates.py  scenarios.py  stabelo.py  tax.py  tax_income.py
tests/: test_kommunalskatt.py  test_model.py  test_montecarlo.py  test_rates.py  test_stabelo.py  test_tax.py  test_tax_income.py
