[project]
name = "insatsvaljare"
version = "0.1.0"
description = "Insatsväljare för bostadsrätt — net-worth forecaster comparing down-payment strategies against alternative ISK/KF investments over a configurable holding period under Sweden's 2026 mortgage rules"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40",
    "pandas>=2.2",
    "numpy>=2.0",
    "plotly>=5.24",
    "httpx>=0.27",
    "pydantic>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insatsvaljare"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
