[project]
name = "insatsvaljare"
version = "0.1.0"
description = "Insatsväljare för bostadsrätt — net-worth forecaster comparing down-payment strategies against alternative ISK/KF investments over a configurable holding period under Sweden's 2026 mortgage rules"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "streamlit>=1.50",
    "pandas>=2.3.3",
    "numpy>=2.3",
    "plotly>=6.0",
    "httpx>=0.28",
    "pydantic>=2.11",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insatsvaljare"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
